// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeNodeComponent does not render children if the node is loading 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <ChevronRight20Regular
        data-text="TreeNode/ExpandIcon"
      />
    }
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent fully renders a tree 1`] = `
<TreeNodeComponent
  node={
    {
      "children": [
        {
          "children": [
            {
              "className": "nodeIcon",
              "iconSrc": "grandchild1Icon.svg",
              "id": "grandchild1",
              "isSelected": [Function],
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            {
              "className": "nodeIcon",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        },
        {
          "children": [
            {
              "className": "nodeIcon",
              "iconSrc": "grandchild3NotRenderedIcon",
              "id": "grandchild3NotRendered",
              "label": "grandchild3NotRenderedLabel",
              "onClick": [MockFunction grandchild3NotRenderedClick],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child2LoadingIcon",
          "id": "child2Loading",
          "isLoading": true,
          "label": "child2LoadingLabel",
          "onClick": [MockFunction child2LoadingClick],
        },
        {
          "className": "nodeIcon",
          "iconSrc": "child3ExpandingIcon",
          "id": "child3Expanding",
          "label": "child3ExpandingLabel",
          "onClick": [MockFunction child3ExpandingClick] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "onExpanded": [Function],
        },
      ],
      "className": "nodeIcon",
      "iconSrc": "rootIcon",
      "id": "root",
      "isSelected": [Function],
      "label": "rootLabel",
      "onClick": [MockFunction rootClick],
    }
  }
  openItems={[]}
  treeNodeId="root"
>
  <TreeItem
    className=""
    data-test="TreeNodeContainer:root"
    itemType="branch"
    onOpenChange={[Function]}
    value="root"
  >
    <div
      aria-expanded={false}
      aria-level={0}
      className="fui-TreeItem r15xhw3a"
      data-fui-tree-item-value="root"
      data-test="TreeNodeContainer:root"
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="treeitem"
      tabIndex={-1}
    >
      <ContextSelector.Provider
        value={
          {
            "actionsRef": {
              "current": null,
            },
            "checked": false,
            "expandIconRef": {
              "current": <div
                aria-hidden="true"
                class="fui-TreeItemLayout__expandIcon rh4pu5o"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  data-text="TreeNode/ExpandIcon"
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                    fill="currentColor"
                  />
                </svg>
              </div>,
            },
            "isActionsVisible": false,
            "isAsideVisible": false,
            "itemType": "branch",
            "layoutRef": {
              "current": <div
                class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                data-test="TreeNode:root"
              >
                <div
                  aria-hidden="true"
                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                >
                  <svg
                    aria-hidden="true"
                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    data-text="TreeNode/ExpandIcon"
                    fill="currentColor"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  aria-hidden="true"
                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                >
                  <img
                    alt=""
                    class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                    src="rootIcon"
                  />
                </div>
                <div
                  class="fui-TreeItemLayout__main rklbe47"
                >
                  <span
                    class="___1h29e9h_0000000 fz5stix"
                  >
                    rootLabel
                  </span>
                </div>
              </div>,
            },
            "open": false,
            "selectionRef": {
              "current": null,
            },
            "subtreeRef": {
              "current": null,
            },
            "treeItemRef": {
              "current": <div
                aria-expanded="false"
                aria-level="0"
                class="fui-TreeItem r15xhw3a"
                data-fui-tree-item-value="root"
                data-test="TreeNodeContainer:root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                  data-test="TreeNode:root"
                >
                  <div
                    aria-hidden="true"
                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                  >
                    <svg
                      aria-hidden="true"
                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                      data-text="TreeNode/ExpandIcon"
                      fill="currentColor"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    aria-hidden="true"
                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                  >
                    <img
                      alt=""
                      class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                      src="rootIcon"
                    />
                  </div>
                  <div
                    class="fui-TreeItemLayout__main rklbe47"
                  >
                    <span
                      class="___1h29e9h_0000000 fz5stix"
                    >
                      rootLabel
                    </span>
                  </div>
                </div>
                <div
                  class="fui-Tree rnv2ez3 ___17a32do_7zrvj80 f1acs6jw f11qra4b fepn2xe f1nbblvp f19d5ny4 fzz4f4n"
                  data-test="Tree:root"
                  role="tree"
                >
                  <div
                    aria-expanded="false"
                    aria-level="1"
                    class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child1Label"
                    data-test="TreeNodeContainer:root/child1Label"
                    role="treeitem"
                    tabindex="0"
                  >
                    <div
                      class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                      data-test="TreeNode:root/child1Label"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rh4pu5o"
                      >
                        <svg
                          aria-hidden="true"
                          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                          data-text="TreeNode/ExpandIcon"
                          fill="currentColor"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                      >
                        <img
                          alt=""
                          class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                          src="child1Icon"
                        />
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rklbe47"
                      >
                        <span
                          class="___1h29e9h_0000000 fz5stix"
                        >
                          child1Label
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-expanded="false"
                    aria-level="1"
                    class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child2LoadingLabel"
                    data-test="TreeNodeContainer:root/child2LoadingLabel"
                    role="treeitem"
                    tabindex="-1"
                  >
                    <div
                      class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                      data-test="TreeNode:root/child2LoadingLabel"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rh4pu5o"
                      >
                        <svg
                          aria-hidden="true"
                          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                          data-text="TreeNode/ExpandIcon"
                          fill="currentColor"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                      >
                        <img
                          alt=""
                          class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                          src="child2LoadingIcon"
                        />
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rklbe47"
                      >
                        <span
                          class="___1h29e9h_0000000 fz5stix"
                        >
                          child2LoadingLabel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-level="1"
                    class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child3ExpandingLabel"
                    data-test="TreeNodeContainer:root/child3ExpandingLabel"
                    role="treeitem"
                    tabindex="-1"
                  >
                    <div
                      class="fui-TreeItemLayout r1bx0xiv ___dxcrnh0_vz3p260 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                      data-test="TreeNode:root/child3ExpandingLabel"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rh4pu5o"
                      >
                        <div
                          class="fui-Spinner r82apo5"
                          role="progressbar"
                        >
                          <span
                            class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                          >
                            <span
                              class="fui-Spinner__spinnerTail rxov3xa"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                      >
                        <img
                          alt=""
                          class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                          src="child3ExpandingIcon"
                        />
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rklbe47"
                      >
                        <span
                          class="___1h29e9h_0000000 fz5stix"
                        >
                          child3ExpandingLabel
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            },
            "value": "root",
          }
        }
      >
        <TreeItemLayout
          actions={false}
          className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
          data-test="TreeNode:root"
          expandIcon={
            <ChevronRight20Regular
              data-text="TreeNode/ExpandIcon"
            />
          }
          iconBefore={
            <img
              alt=""
              className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
              src="rootIcon"
            />
          }
        >
          <div
            className="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
            data-test="TreeNode:root"
          >
            <div
              aria-hidden={true}
              className="fui-TreeItemLayout__expandIcon rh4pu5o"
            >
              <ChevronRight20Regular
                data-text="TreeNode/ExpandIcon"
              >
                <svg
                  aria-hidden={true}
                  className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  data-text="TreeNode/ExpandIcon"
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                    fill="currentColor"
                  />
                </svg>
              </ChevronRight20Regular>
            </div>
            <div
              aria-hidden={true}
              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
            >
              <img
                alt=""
                className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                src="rootIcon"
              />
            </div>
            <div
              className="fui-TreeItemLayout__main rklbe47"
            >
              <span
                className="___1h29e9h_0000000 fz5stix"
              >
                rootLabel
              </span>
            </div>
          </div>
        </TreeItemLayout>
        <Tree
          className="___17a32do_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp f19d5ny4 fzz4f4n"
          data-test="Tree:root"
        >
          <TreeProvider
            value={
              {
                "appearance": "subtle",
                "checkedItems": {
                  "clear": [Function],
                  "dangerouslyGetInternalMap_unstable": [Function],
                  "delete": [Function],
                  "get": [Function],
                  "has": [Function],
                  "set": [Function],
                  "size": 0,
                  Symbol(Symbol.iterator): [Function],
                },
                "contextType": "root",
                "level": 1,
                "openItems": {
                  "add": [Function],
                  "clear": [Function],
                  "dangerouslyGetInternalSet_unstable": [Function],
                  "delete": [Function],
                  "has": [Function],
                  "size": 0,
                  Symbol(Symbol.iterator): [Function],
                },
                "requestTreeResponse": [Function],
                "selectionMode": "none",
                "size": "medium",
                "treeType": "nested",
              }
            }
          >
            <ContextSelector.Provider
              value={
                {
                  "appearance": "subtle",
                  "checkedItems": {
                    "clear": [Function],
                    "dangerouslyGetInternalMap_unstable": [Function],
                    "delete": [Function],
                    "get": [Function],
                    "has": [Function],
                    "set": [Function],
                    "size": 0,
                    Symbol(Symbol.iterator): [Function],
                  },
                  "contextType": "root",
                  "level": 1,
                  "openItems": {
                    "add": [Function],
                    "clear": [Function],
                    "dangerouslyGetInternalSet_unstable": [Function],
                    "delete": [Function],
                    "has": [Function],
                    "size": 0,
                    Symbol(Symbol.iterator): [Function],
                  },
                  "requestTreeResponse": [Function],
                  "selectionMode": "none",
                  "size": "medium",
                  "treeType": "nested",
                }
              }
            >
              <div
                className="fui-Tree rnv2ez3 ___17a32do_7zrvj80 f1acs6jw f11qra4b fepn2xe f1nbblvp f19d5ny4 fzz4f4n"
                data-test="Tree:root"
                role="tree"
              >
                <TreeNodeComponent
                  key="child1Label"
                  node={
                    {
                      "children": [
                        {
                          "className": "nodeIcon",
                          "iconSrc": "grandchild1Icon.svg",
                          "id": "grandchild1",
                          "isSelected": [Function],
                          "label": "grandchild1Label",
                          "onClick": [MockFunction grandchild1Click],
                        },
                        {
                          "className": "nodeIcon",
                          "iconSrc": "grandchild2Icon",
                          "id": "grandchild2",
                          "label": "grandchild2Label",
                          "onClick": [MockFunction grandchild2Click],
                        },
                      ],
                      "className": "nodeIcon",
                      "iconSrc": "child1Icon",
                      "id": "child1",
                      "label": "child1Label",
                      "onClick": [MockFunction child1Click],
                    }
                  }
                  openItems={[]}
                  treeNodeId="root/child1Label"
                >
                  <TreeItem
                    className=""
                    data-test="TreeNodeContainer:root/child1Label"
                    itemType="branch"
                    onOpenChange={[Function]}
                    value="root/child1Label"
                  >
                    <div
                      aria-expanded={false}
                      aria-level={1}
                      className="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child1Label"
                      data-test="TreeNodeContainer:root/child1Label"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          {
                            "actionsRef": {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rh4pu5o"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  data-text="TreeNode/ExpandIcon"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "branch",
                            "layoutRef": {
                              "current": <div
                                class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                data-test="TreeNode:root/child1Label"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    data-text="TreeNode/ExpandIcon"
                                    fill="currentColor"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </div>
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                >
                                  <img
                                    alt=""
                                    class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                    src="child1Icon"
                                  />
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rklbe47"
                                >
                                  <span
                                    class="___1h29e9h_0000000 fz5stix"
                                  >
                                    child1Label
                                  </span>
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": {
                              "current": null,
                            },
                            "subtreeRef": {
                              "current": null,
                            },
                            "treeItemRef": {
                              "current": <div
                                aria-expanded="false"
                                aria-level="1"
                                class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child1Label"
                                data-test="TreeNodeContainer:root/child1Label"
                                role="treeitem"
                                tabindex="0"
                              >
                                <div
                                  class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                  data-test="TreeNode:root/child1Label"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                      data-text="TreeNode/ExpandIcon"
                                      fill="currentColor"
                                      height="20"
                                      viewBox="0 0 20 20"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                  >
                                    <img
                                      alt=""
                                      class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                      src="child1Icon"
                                    />
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rklbe47"
                                  >
                                    <span
                                      class="___1h29e9h_0000000 fz5stix"
                                    >
                                      child1Label
                                    </span>
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child1Label",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                          data-test="TreeNode:root/child1Label"
                          expandIcon={
                            <ChevronRight20Regular
                              data-text="TreeNode/ExpandIcon"
                            />
                          }
                          iconBefore={
                            <img
                              alt=""
                              className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                              src="child1Icon"
                            />
                          }
                        >
                          <div
                            className="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                            data-test="TreeNode:root/child1Label"
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__expandIcon rh4pu5o"
                            >
                              <ChevronRight20Regular
                                data-text="TreeNode/ExpandIcon"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  data-text="TreeNode/ExpandIcon"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </ChevronRight20Regular>
                            </div>
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                            >
                              <img
                                alt=""
                                className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                src="child1Icon"
                              />
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rklbe47"
                            >
                              <span
                                className="___1h29e9h_0000000 fz5stix"
                              >
                                child1Label
                              </span>
                            </div>
                          </div>
                        </TreeItemLayout>
                        <Tree
                          className="___17a32do_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp f19d5ny4 fzz4f4n"
                          data-test="Tree:root/child1Label"
                        >
                          <TreeProvider
                            value={
                              {
                                "contextType": "subtree",
                                "level": 2,
                              }
                            }
                          />
                        </Tree>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
                <TreeNodeComponent
                  key="child2LoadingLabel"
                  node={
                    {
                      "children": [
                        {
                          "className": "nodeIcon",
                          "iconSrc": "grandchild3NotRenderedIcon",
                          "id": "grandchild3NotRendered",
                          "label": "grandchild3NotRenderedLabel",
                          "onClick": [MockFunction grandchild3NotRenderedClick],
                        },
                      ],
                      "className": "nodeIcon",
                      "iconSrc": "child2LoadingIcon",
                      "id": "child2Loading",
                      "isLoading": true,
                      "label": "child2LoadingLabel",
                      "onClick": [MockFunction child2LoadingClick],
                    }
                  }
                  openItems={[]}
                  treeNodeId="root/child2LoadingLabel"
                >
                  <TreeItem
                    className=""
                    data-test="TreeNodeContainer:root/child2LoadingLabel"
                    itemType="branch"
                    onOpenChange={[Function]}
                    value="root/child2LoadingLabel"
                  >
                    <div
                      aria-expanded={false}
                      aria-level={1}
                      className="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child2LoadingLabel"
                      data-test="TreeNodeContainer:root/child2LoadingLabel"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          {
                            "actionsRef": {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rh4pu5o"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  data-text="TreeNode/ExpandIcon"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "branch",
                            "layoutRef": {
                              "current": <div
                                class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                data-test="TreeNode:root/child2LoadingLabel"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    data-text="TreeNode/ExpandIcon"
                                    fill="currentColor"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </div>
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                >
                                  <img
                                    alt=""
                                    class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                    src="child2LoadingIcon"
                                  />
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rklbe47"
                                >
                                  <span
                                    class="___1h29e9h_0000000 fz5stix"
                                  >
                                    child2LoadingLabel
                                  </span>
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": {
                              "current": null,
                            },
                            "subtreeRef": {
                              "current": null,
                            },
                            "treeItemRef": {
                              "current": <div
                                aria-expanded="false"
                                aria-level="1"
                                class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child2LoadingLabel"
                                data-test="TreeNodeContainer:root/child2LoadingLabel"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                  data-test="TreeNode:root/child2LoadingLabel"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                      data-text="TreeNode/ExpandIcon"
                                      fill="currentColor"
                                      height="20"
                                      viewBox="0 0 20 20"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                  >
                                    <img
                                      alt=""
                                      class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                      src="child2LoadingIcon"
                                    />
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rklbe47"
                                  >
                                    <span
                                      class="___1h29e9h_0000000 fz5stix"
                                    >
                                      child2LoadingLabel
                                    </span>
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child2LoadingLabel",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                          data-test="TreeNode:root/child2LoadingLabel"
                          expandIcon={
                            <ChevronRight20Regular
                              data-text="TreeNode/ExpandIcon"
                            />
                          }
                          iconBefore={
                            <img
                              alt=""
                              className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                              src="child2LoadingIcon"
                            />
                          }
                        >
                          <div
                            className="fui-TreeItemLayout r1bx0xiv ___9uolwu0_9b0r4g0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                            data-test="TreeNode:root/child2LoadingLabel"
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__expandIcon rh4pu5o"
                            >
                              <ChevronRight20Regular
                                data-text="TreeNode/ExpandIcon"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  data-text="TreeNode/ExpandIcon"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </ChevronRight20Regular>
                            </div>
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                            >
                              <img
                                alt=""
                                className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                src="child2LoadingIcon"
                              />
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rklbe47"
                            >
                              <span
                                className="___1h29e9h_0000000 fz5stix"
                              >
                                child2LoadingLabel
                              </span>
                            </div>
                          </div>
                        </TreeItemLayout>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
                <TreeNodeComponent
                  key="child3ExpandingLabel"
                  node={
                    {
                      "className": "nodeIcon",
                      "iconSrc": "child3ExpandingIcon",
                      "id": "child3Expanding",
                      "label": "child3ExpandingLabel",
                      "onClick": [MockFunction child3ExpandingClick] {
                        "calls": [
                          [],
                        ],
                        "results": [
                          {
                            "type": "return",
                            "value": undefined,
                          },
                        ],
                      },
                      "onExpanded": [Function],
                    }
                  }
                  openItems={[]}
                  treeNodeId="root/child3ExpandingLabel"
                >
                  <TreeItem
                    className=""
                    data-test="TreeNodeContainer:root/child3ExpandingLabel"
                    itemType="leaf"
                    onOpenChange={[Function]}
                    value="root/child3ExpandingLabel"
                  >
                    <div
                      aria-level={1}
                      className="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child3ExpandingLabel"
                      data-test="TreeNodeContainer:root/child3ExpandingLabel"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          {
                            "actionsRef": {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rh4pu5o"
                              >
                                <div
                                  class="fui-Spinner r82apo5"
                                  role="progressbar"
                                >
                                  <span
                                    class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                                  >
                                    <span
                                      class="fui-Spinner__spinnerTail rxov3xa"
                                    />
                                  </span>
                                </div>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "leaf",
                            "layoutRef": {
                              "current": <div
                                class="fui-TreeItemLayout r1bx0xiv ___dxcrnh0_vz3p260 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                data-test="TreeNode:root/child3ExpandingLabel"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                >
                                  <div
                                    class="fui-Spinner r82apo5"
                                    role="progressbar"
                                  >
                                    <span
                                      class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                                    >
                                      <span
                                        class="fui-Spinner__spinnerTail rxov3xa"
                                      />
                                    </span>
                                  </div>
                                </div>
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                >
                                  <img
                                    alt=""
                                    class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                    src="child3ExpandingIcon"
                                  />
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rklbe47"
                                >
                                  <span
                                    class="___1h29e9h_0000000 fz5stix"
                                  >
                                    child3ExpandingLabel
                                  </span>
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": {
                              "current": null,
                            },
                            "subtreeRef": {
                              "current": null,
                            },
                            "treeItemRef": {
                              "current": <div
                                aria-level="1"
                                class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child3ExpandingLabel"
                                data-test="TreeNodeContainer:root/child3ExpandingLabel"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="fui-TreeItemLayout r1bx0xiv ___dxcrnh0_vz3p260 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                  data-test="TreeNode:root/child3ExpandingLabel"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                  >
                                    <div
                                      class="fui-Spinner r82apo5"
                                      role="progressbar"
                                    >
                                      <span
                                        class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                                      >
                                        <span
                                          class="fui-Spinner__spinnerTail rxov3xa"
                                        />
                                      </span>
                                    </div>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                  >
                                    <img
                                      alt=""
                                      class="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                      src="child3ExpandingIcon"
                                    />
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rklbe47"
                                  >
                                    <span
                                      class="___1h29e9h_0000000 fz5stix"
                                    >
                                      child3ExpandingLabel
                                    </span>
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child3ExpandingLabel",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                          data-test="TreeNode:root/child3ExpandingLabel"
                          iconBefore={
                            <img
                              alt=""
                              className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                              src="child3ExpandingIcon"
                            />
                          }
                        >
                          <div
                            className="fui-TreeItemLayout r1bx0xiv ___dxcrnh0_vz3p260 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                            data-test="TreeNode:root/child3ExpandingLabel"
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                            >
                              <img
                                alt=""
                                className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                src="child3ExpandingIcon"
                              />
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rklbe47"
                            >
                              <span
                                className="___1h29e9h_0000000 fz5stix"
                              >
                                child3ExpandingLabel
                              </span>
                            </div>
                          </div>
                        </TreeItemLayout>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
              </div>
            </ContextSelector.Provider>
          </TreeProvider>
        </Tree>
      </ContextSelector.Provider>
    </div>
  </TreeItem>
</TreeNodeComponent>
`;

exports[`TreeNodeComponent renders a loading spinner if the node is loading: loaded 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a loading spinner if the node is loading: loading 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <Spinner
        size="extra-tiny"
      />
    }
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a node as expandable if it has empty, but defined, children array 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <ChevronRight20Regular
        data-text="TreeNode/ExpandIcon"
      />
    }
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a node with a menu 1`] = `
<Menu
  onOpenChange={[Function]}
  openOnContext={true}
  positioning="below-end"
>
  <MenuTrigger
    disableButtonEnhancement={true}
  >
    <TreeItem
      className=""
      data-test="TreeNodeContainer:root"
      itemType="leaf"
      onOpenChange={[Function]}
      value="root"
    >
      <TreeItemLayout
        actions={
          {
            "children": <Menu
              onOpenChange={[Function]}
            >
              <MenuTrigger
                disableButtonEnhancement={true}
              >
                <Button
                  appearance="subtle"
                  aria-label="More options"
                  className="___1pg0eu5_pgl3ex0 f1twygmj"
                  data-test="TreeNode/ContextMenuTrigger"
                  icon={<MoreHorizontal20Regular />}
                />
              </MenuTrigger>
              <MenuPopover
                data-test="TreeNode/ContextMenu:root"
              >
                <MenuList>
                  <MenuItem
                    data-test="TreeNode/ContextMenuItem:enabledItem"
                    onClick={[Function]}
                  >
                    enabledItem
                  </MenuItem>
                  <MenuItem
                    data-test="TreeNode/ContextMenuItem:disabledItem"
                    disabled={true}
                    onClick={[Function]}
                  >
                    disabledItem
                  </MenuItem>
                </MenuList>
              </MenuPopover>
            </Menu>,
            "className": "___1r8p62d_0000000 f1xg1ack f1e31b4d",
          }
        }
        className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
        data-test="TreeNode:root"
        iconBefore={
          <img
            alt=""
            className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
            src="rootIcon"
          />
        }
      >
        <span
          className="___1h29e9h_0000000 fz5stix"
        >
          rootLabel
        </span>
      </TreeItemLayout>
    </TreeItem>
  </MenuTrigger>
  <MenuPopover>
    <MenuList>
      <MenuItem
        data-test="TreeNode/ContextMenuItem:enabledItem"
        key="enabledItem"
        onClick={[Function]}
      >
        enabledItem
      </MenuItem>
      <MenuItem
        data-test="TreeNode/ContextMenuItem:disabledItem"
        disabled={true}
        key="disabledItem"
        onClick={[Function]}
      >
        disabledItem
      </MenuItem>
    </MenuList>
  </MenuPopover>
</Menu>
`;

exports[`TreeNodeComponent renders a single node 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders an icon if the node has one 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="the-icon.svg"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders selected parent node as selected if no descendant nodes are selected 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___rq9vxg0_1ykn2d2 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1nfm20t f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <ChevronRight20Regular
        data-text="TreeNode/ExpandIcon"
      />
    }
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
  <Tree
    className="___17a32do_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp f19d5ny4 fzz4f4n"
    data-test="Tree:root"
  >
    <TreeNodeComponent
      key="child1Label"
      node={
        {
          "children": [
            {
              "className": "nodeIcon",
              "iconSrc": "grandchild1Icon",
              "id": "grandchild1",
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            {
              "className": "nodeIcon",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        }
      }
      openItems={[]}
      treeNodeId="root/child1Label"
    />
    <TreeNodeComponent
      key="child2Label"
      node={
        {
          "className": "nodeIcon",
          "iconSrc": "child2Icon",
          "id": "child2",
          "label": "child2Label",
          "onClick": [MockFunction child2Click],
        }
      }
      openItems={[]}
      treeNodeId="root/child2Label"
    />
  </Tree>
</TreeItem>
`;

exports[`TreeNodeComponent renders selected parent node as unselected if any descendant node is selected 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___z7owk70_14ep1pe fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <ChevronRight20Regular
        data-text="TreeNode/ExpandIcon"
      />
    }
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
  <Tree
    className="___17a32do_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp f19d5ny4 fzz4f4n"
    data-test="Tree:root"
  >
    <TreeNodeComponent
      key="child1Label"
      node={
        {
          "children": [
            {
              "className": "nodeIcon",
              "iconSrc": "grandchild1Icon",
              "id": "grandchild1",
              "isSelected": [Function],
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            {
              "className": "nodeIcon",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        }
      }
      openItems={[]}
      treeNodeId="root/child1Label"
    />
    <TreeNodeComponent
      key="child2Label"
      node={
        {
          "className": "nodeIcon",
          "iconSrc": "child2Icon",
          "id": "child2",
          "label": "child2Label",
          "onClick": [MockFunction child2Click],
        }
      }
      openItems={[]}
      treeNodeId="root/child2Label"
    />
  </Tree>
</TreeItem>
`;

exports[`TreeNodeComponent renders single selected leaf node as selected 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___rq9vxg0_1ykn2d2 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1nfm20t f1do9gdl"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className="___1h29e9h_0000000 fz5stix"
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;
